17 Dec 2006
   [Pragma]
   - Committed the new german translation file by Mihai "Ionic" Moldovan
   - Switched the source control system to SVN: happy coding :)

15 Dec 2006
   [Pragma]
   - Yet more work on the options dialog
   - Added an option for the "network name in taskbar": it's cool, but we want to choose :)

12 Dec 2006
   [Alexey]
   - Added option to create minimized channels
   - Fixed nick selecting in userlist via ircview
   - Fixed mouse hover link effect
   - Network name now will be shown in the taskabr instead on server name

07 Dec 2006
   [Pragma]
   - Yet more work on the options dialog
   - Fixed a crash related to the dialog.* module calls

28 Nov 2006
   [Pragma]
   - More work on the options dialogs
   - Removed the duplicated kvc_ icon.

19 Nov 2006 
   [Alexey]
   - New function - $chan.getUrl
   - NickServ identity can now accept masks in nick field

16 Nov 2006 
   [Alexey]
   - Added a simple browser-like address bar to console
   - Clicking on nick in channel ircview now selects it in the userlist
   - Avatar dcc send rejected if avatar size greater, then max filesize, setted in options
   
15 Nov 2006
   [HelLViS69]
   - Added a checkbox on AwayIndicator applet popup to choose to go away
     on all IRC Contexts

14 Nov 2006
   [Pragma]
   - Moved the userlist feature options page to the theme option dialog
     and splitted all the userlist options in tabs
   - Corrected some typos around
   - Reworked the output options page
   - Updated the directory selection dialog under KDE
   - Avatars bigger than 1024x768 make KVIrc complain when setting them
     and are scaled to a saner size when they are received from others.

13 Nov 2006
   [Pragma]
   - Added $object.instances(): useful when implementing singletons.
   - Fixed a small image dialog issue

9 Nov 2006
   [Pragma]
   - Added support for chunked HTTP transfer encoding as required by HTTP/1.1
   - A fix for object toolbar position not saved properly